# BookingBot

./: .gitignore  BookingBot.code-workspace  Pipfile  README.md  booking.py  bot.py  botlog.py  botsettings.py  exceptions.py  help.txt  manage.py  models.py  pstats_write.py  pyproject.toml  setup.cfg
