[tool.poetry]
name = "BookingBot"
version = "0.1.0"
description = ""
authors = ["Artiom Khandamirov <t9max@yandex.ru>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
pytelegrambotapi = "^3.6.6"
pysocks = "^1.7.1"
peewee = "^3.13.1"
click = "^7.0"
psycopg2 = {version = "^2.8.4", optional = true}

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
pydocstyle = "^5.0.1"
autopep8 = "^1.4.4"
mypy = "^0.761"
flake8 = "^3.7.9"
bandit = "^1.6.2"
rope = "^0.14.0"

[tool.poetry.extras]
postgres = ["psycopg2"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
